# app1_grupo6

./: CMakeLists.txt  README.md  admin.c  admin.h  archivo.c  archivo.h  borrar_libro  borrar_libro.h  inventario2.csv  libros.c  libros.h  main.c  pablo.c  pablo.h
